--- a/app/src/main/res/layout/activity_chiringuito.xml
+++ b/app/src/main/res/layout/activity_chiringuito.xml
@@ -85,7 +85,7 @@
                 android:background="@drawable/rounded_corner_chiringuito"
                 android:ems="10"
                 android:gravity="center_horizontal|center_vertical"
-                android:hint="Descripción"
+                android:hint="Ingredientes"
                 android:inputType="textMultiLine"
                 android:textColor="@color/white"
                 android:textColorHint="#FFFFFF"
