--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -184,7 +184,7 @@
                 android:ems="10"
                 android:foregroundGravity="center"
                 android:gravity="start|top"
-                android:hint="@string/descripcion"
+                android:hint="Ingredientes"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
                 android:textColor="@color/white"
